--- a/estilo.css
+++ b/estilo.css
@@ -59,9 +59,32 @@ canvas:focus
 	margin-right: 20px;
 }
 
+#myCarousel
+{
+	position: absolute;
+	margin-left: 350px;
+	margin-top: 30px;
+	width: 400px;
+	border-radius: 4px;
+}
+
+#texto-cppaint
+{
+	width: 320px;
+}
+
 #tutubarao
 {
 	margin: auto;
-	background-color: #141414;
+	background-color: #222222;
 	width: 800px;
+	border-radius: 4px;
+}
+
+#rodape
+{
+	margin: auto;
+	background-color: inherit;
+	width: 800px;
+	height: 30px;
 }
